# pulse

./: .env.development  .gitignore  .prettierignore  AGENTS.md  AI_UX_OPTIMIZATION_PLAN.md  README.md  components.json  docker-compose.yml  eslint.config.mjs  fly.toml  index.html  jest.config.cjs  migration-todo-list.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
backend/: .env.example  .gitignore  .vercelignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt  vercel.json
backend/app/: __init__.py  config.py  database.py  deploy_env.py  main.py  mcp_context.py  mcp_server.py  mcp_tools.py  repositories.py  security.py  system_config.py  validation.py
backend/docs/: AGENT_ARCHITECTURE_REVIEW_2026_05_08.md  AGENT_ARCHITECTURE_REVIEW_2026_05_09.md  AI_ARCHITECTURE_REVIEW.md  AI_REMAINING_WORK.md  API.md  BACKEND_API.md  BACKEND_PRODUCTION_READINESS.md  PRODUCTION_READINESS.md  backend-production-readiness.md  deployment.md
backend/scripts/: backfill_task_embeddings.py  deploy.sh  generate_parity_golden.py  run_eval.sh
backend/tests/: conftest.py  test_agent_backend_resolution.py  test_agent_events.py  test_agent_mutation_journal.py  test_agent_sse_transcripts.py  test_agents.py  test_agents_catalog.py  test_agents_errors.py  test_agents_postgres_live.py  test_agents_request_context_merge.py  test_agents_router_v21.py  test_ai_limits.py  test_ai_redaction.py  test_ai_v1_router.py  test_api_features.py  test_api_repetitive_calls.py  test_apply_mutation_split.py  test_board_brief.py  test_budget_multi_worker.py  test_chat_envelope_integration.py  test_chat_model_override.py  test_chat_mutation_lifecycle.py  test_chat_round_cap.py  test_chat_tools.py  test_column_category.py  test_comments.py  test_config.py  test_core_review_compile.py  test_coverage_filling.py  test_database.py  test_dependency_gate.py  test_dependency_manifests.py  test_deploy_env.py  (+58 more)
(+1196 files in other folders)
