[project]
name = "jira-python-server"
version = "0.1.0"
description = "FastAPI port of jira-express-server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pymongo>=4.8.0",
    "dnspython>=2.6.1",
    "python-dotenv>=1.0.1",
    "PyJWT>=2.9.0",
    "langgraph>=1.1,<2",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
]

[project.optional-dependencies]
databases = [
    "boto3>=1.34.0",
    "psycopg[binary]>=3.2.0",
]
anthropic = [
    "langchain-anthropic>=0.3.0",
]
openai = [
    "langchain-openai>=0.3.0",
]
postgres-agents = [
    "langgraph-checkpoint-postgres>=3.0,<4",
    "psycopg[binary]>=3.2.0",
]
redis = [
    "redis>=5.0,<7",
]
observability = [
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-semantic-conventions>=0.48b0",
    "prometheus-client>=0.20",
]
ai = [
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph-checkpoint-postgres>=3.0,<4",
    "psycopg[binary]>=3.2.0",
    "redis>=5.0,<7",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-semantic-conventions>=0.48b0",
    "prometheus-client>=0.20",
]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "fakeredis[lua]>=2.21",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=100"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"api/index.py" = ["F401"]
